Implemented the creation of a database
* Implemented the creation of a database.
* Changed CMake to support C++17
TODO: Implement returning of error value

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.25)
 PROJECT(NoSQLDBMS VERSION 0.1)
 
+SET(CMAKE_CXX_STANDARD 17) 
+
 INCLUDE_DIRECTORIES(include)
 
 ADD_LIBRARY(libs
-	src/db.cpp
+	"src/dbms.cpp"
 )
 
 ADD_EXECUTABLE(test tests/main.cpp)
